feat[lab 6.3]: add updated UI